--- a/css/BTL.css
+++ b/css/BTL.css
@@ -42,13 +42,15 @@ form.search .icon-search:hover{
 #search:hover{
     background-color: white;
 }
-.nav {
+#nav {
     background-color: #00bbb3;
-    position: relative;
+    position: fixed;
+    width: 100%;
     max-height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 .nav li {
     position: relative;
@@ -81,7 +83,7 @@ form.search .icon-search:hover{
     position: relative;
     width: 100%;
     height: 500px;
-    margin: auto;
+    margin-top: 40px;
     animation-name: slide-animation;
     animation-duration: 10s;
     animation-iteration-count: infinite;
@@ -131,4 +133,7 @@ form.search .icon-search:hover{
     background-color: #00bbb3;
     text-decoration: none;
     opacity: 1;
+}
+#content{
+    margin-top: 100px;
 }
