--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,13 +13,17 @@ body a:hover {
     text-decoration: none;
 }
 div.shop {
-    display: flex;
+    position: relative;
+}
+div.shop a.logo{
+    position: relative;
+    left: 15%;
 }
 form.search {
     position: absolute;
     display: flex;
-    top: 50px;
-    left: 600px
+    top: 40%;
+    left: 45%;
 }
 #search {
     height: 34px;
@@ -40,8 +44,8 @@ form.search {
 }
 div.shop a.basket {
     position: absolute;
-    top: 20px;
-    right: 100px;
+    top: 30%;
+    right: 10%;
 }
 form.search .icon-search:hover{
     background-color: #28a745;
@@ -118,20 +122,29 @@ form.search .icon-search:hover{
 #slider{
     position: relative;
     width: 100%;
-    height: 500px;
+    padding-top: 35%;
     margin-top: 40px;
     animation-name: slide-animation;
     animation-duration: 10s;
     animation-iteration-count: infinite;
 }
 
-.slider-images{
+#slider img{
+    width: 25%;
+    border-radius: 100%;
+    border: 1px solid rgba(0,0,0,.15);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.text-slider {
     position: absolute;
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    bottom: 10px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 
 @keyframes slide-animation {
@@ -176,5 +189,5 @@ form.search .icon-search:hover{
     margin-top: 100px;
 }
 .container{
-    margin: 0px auto;
+    margin: 0px 40px;
 }
