--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,9 @@ html {
 a{
     text-decoration: none;
 }
+.clear {
+    clear: both;
+}
 body a:hover {
     text-decoration: none;
 }
@@ -45,7 +48,14 @@ form.search {
 div.shop a.basket {
     position: absolute;
     top: 30%;
-    right: 10%;
+    right: 10%;         
+    text-align: center;
+    padding: 1%;
+    font-size: 20px;
+    background: #333;
+    border-radius: 50%;
+    color: #666;
+    transition: .5s;
 }
 form.search .icon-search:hover{
     background-color: #28a745;
@@ -138,8 +148,8 @@ form.search .icon-search:hover{
 
 .text-slider {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 50%;                   /* */
+    transform: translateX(-50%); /* width: 100%; */
     text-align: center;
     color: #fff;
     text-transform: uppercase;
@@ -186,8 +196,238 @@ form.search .icon-search:hover{
     opacity: 1;
 }
 #content{
-    margin-top: 100px;
+    margin-top: 30px;
+}
+#content .content-section .content-title{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: inline-block;
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px 0px 20px;
+}
+#content .content-title .section-heading {
+    display: inline-block;
+    position: relative;
+    border-radius: 4px 0px 0px 4px;
+    text-transform: uppercase;
+    padding: 0px 8px 0px 12px;
+    background-color: #00a650;
+    color: #fff;
+    line-height: 45px;
+    font-size: 16px;
+    font-weight: 500;
+}
+#content .content-title .section-heading::after {
+    content: " ";
+    display: block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    border-top: 22px solid transparent;
+    border-left: 15px solid;
+    border-left-color: #00a651;
+    border-right: 0 solid transparent;
+    border-bottom: 23px solid transparent;
+    position: absolute;
+    top: 0;
+    right: -15px;
+}
+#content .content-section .row {
+    display: flex;
+}
+#content .content-section .row .block-section {
+    width: 75%;
+    min-height: 1px;
+    position: relative;
+    float: left;
+    padding: 0px 15px;
+}
+#content .content-section .row .col {
+    width: 25%;
+    min-height: 1px;
+    position: relative;
+    float: left;
+    padding: 0px 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+#content .block-section .banner-block {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+#content .products-block .product-item {
+    position: relative;
+    float: left;
+    width: 15.5%;
+    height: 300px;
+    margin-right: 14px;
+    border-radius: 5px;
+    padding: 10px 5px;
+    text-align: center;
+    transition: all .35s ease;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+#content .product-item .product-img {
+    width: 180px;
+    height: 150px;
+}
+#content .product-item a:hover .product-img {
+    transform: rotateY(-180deg);
+    transition: transform 1s ease-in;
+}
+#content .product-item .product-name {
+    text-align: center;
+    font-size: 15px;
+    min-height: 55px;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 10px 0px;
+    color: #3DA35D;
+    position: relative;
+}
+#content .product-item .price {
+    color: #00bbb3;
+    font-size: 14px;
+    font-weight: 600;
+}
+#content .product-item .price .del-price {
+    font-style: italic;
+    color: #999999;
+    font-size: 12px;
+    font-weight: normal;
+}
+#content .product-item .btn-product {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    left: 50%;                  
+    transform: translateX(-50%);
+    text-align: center;
+    bottom: 10px;
+    padding: 5%;
+    font-size: 20px;
+    background: #333;
+    border-radius: 50%;
+    color: #666;
+    transition: .5s;
+}
+#content .product-item .btn-product::before,
+.shop .btn-product::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #333;
+    transition: .5s;
+    transform: scale(.9);
+    z-index: -1;
+}
+#content .product-item .btn-product:hover::before,
+.shop .btn-product:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #ffee10;
+}
+#content .product-item .btn-product:hover,
+.shop .btn-product:hover {
+    color: #ffee10;
+    box-shadow: 0 0 5px #ffee10;
+    text-shadow: 0 0 5px #ffee10;
+}
+#content .product-item .product-name::before {
+    content: '';
+    right: 0;
+    top: 0;
+    border-top: 3px solid #3E8914;
+    border-right: 3px solid #2E640F;
+    transform: translate(-100%, 50%);
+}
+#content .product-item .product-name::after {
+    content: '';
+    left: 0;
+    bottom: 0;
+    border-bottom: 3px solid #2E640F;
+    border-left: 3px solid #3E8914;
+    transform: translate(100%, -50%)
+}
+#content .product-item .product-name::before,
+#content .product-item .product-name::after {
+  content: '';
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  transition: all .35s ease;
+  opacity: 0;
+}
+#content .product-item a:hover .product-name::before,
+#content .product-item a:hover .product-name::after{
+  transform: translate(0,0);
+  opacity: 1;
+}
+
+#content .product-item a:hover .product-name {
+  color: #3DA35D;
+  font-weight: bold;
+}
+#content .product-item a:hover .price {
+    transform: scale(1.1);
 }
 .container{
-    margin: 0px 40px;
+    margin: 0px 5%;
+}
+#icon ul.social {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+  
+#icon ul.social li {
+    list-style: none;
+    margin: 0 15px;
+}
+  
+#icon ul.social li a {
+    position: relative; 
+    display: block;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 63px;
+    background: #333;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #666;
+    transition: .5s;
+}
+  
+#icon ul.social li a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #ffee10;
+    transition: .5s;
+    transform: scale(.9);
+    z-index: -1;
+}
+  
+#icon ul.social li a:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #ffee10;
+}
+  
+#icon ul.social li a:hover {
+    color: #ffee10;
+    box-shadow: 0 0 5px #ffee10;
+    text-shadow: 0 0 5px #ffee10;
 }
