--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
 }
 html {
     font-family: Tahoma, sans-serif;
+    font-size: 20px;
 }
 a{
     text-decoration: none;
@@ -15,58 +16,83 @@ a{
 body a:hover {
     text-decoration: none;
 }
-div.shop {
+.shop {
+    margin: 0px 10%;
     position: relative;
 }
-div.shop a.logo{
-    position: relative;
-    left: 15%;
+.inline-block {
+    display: inline-block;
 }
-form.search {
+.shop .logo{
+    width: 20%;
+}
+.shop .search {
     position: absolute;
-    display: flex;
+    width: 40%;
     top: 40%;
-    left: 45%;
+    margin: 0px 15%;
 }
-#search {
+.text-search {
+    width: 85%;
+    float: left;
+}
+.btn-search {
+    width: 15%;
+}
+#text-search {
+    width: 100%;
     height: 34px;
-    width: 300px;
-    padding: 15px;
+    padding: 3% 0px 3% 5%;
     background-color: #F0F0F0;
     outline: none;
     border: 1px solid #00bbb3;
     border-right: none;
     border-radius: 999px 0px 0px 999px;
 }
-#button {
+#btn-search {
     height: 34px;
-    width: 50px;
+    width: 100%;
     border: 1px solid #00bbb3;
     border-left: none;
     border-radius: 0px 999px 999px 0px;
 }
-div.shop a.basket {
+.shop .basket { 
     position: absolute;
     top: 30%;
-    right: 10%;         
+    right: 5%;
+    width: 5%;
     text-align: center;
     padding: 1%;
-    font-size: 20px;
+    line-height: 30px;
     background: #333;
     border-radius: 50%;
     color: #666;
     transition: .5s;
 }
-form.search .icon-search:hover{
+.shop .basket:hover {
+    color: #ffee10;
+    box-shadow: 0 0 5px #ffee10;
+    text-shadow: 0 0 5px #ffee10;
+}
+.shop .basket .btn-product:active {
+    color: red;
+}
+.shop .basket .btn-product {
+    width: 100%;
+    color: #ffee10;
+}
+#btn-search:hover{
     background-color: #28a745;
     cursor: pointer;
 }
-#search:hover{
+#text-search:hover{
     background-color: white;
 }
+/* navigation */
 #nav {
     background-color: #00bbb3;
     position: absolute;
+    font-size: 16px;
     width: 100%;
     max-height: 40px;
     display: flex;
@@ -97,7 +123,7 @@ form.search .icon-search:hover{
 }
 #nav .subnav a{
     white-space: nowrap;
-    color: black;
+    color: #606060;
     text-align: center;
     font-size: .75em;
     
@@ -128,10 +154,11 @@ form.search .icon-search:hover{
     opacity: 0.9;
     top: 0px
 }
-
+/* slider */
 #slider{
     position: relative;
     width: 100%;
+    font-size: 16px;
     padding-top: 35%;
     margin-top: 40px;
     animation-name: slide-animation;
@@ -177,7 +204,7 @@ form.search .icon-search:hover{
         background: url('../img/2018-09-12.jpg') top center / cover no-repeat;
     }
 }
-
+/* go to top */
 .fa-circle-chevron-up {
     font-size: 45px;
     background-color: tomato;
@@ -190,11 +217,15 @@ form.search .icon-search:hover{
     z-index: 1000;
 }
 .fa-circle-chevron-up:hover {
-    background-color: #00bbb3;
+    background-color: #ffee10;
     color: lightgrey;
     text-decoration: none;
+    transform: scale(1.1);
+    box-shadow: 0 0 5px #ffee10;
+    text-shadow: 0 0 5px #ffee10;
     opacity: 1;
 }
+/* content */
 #content{
     margin-top: 30px;
 }
@@ -269,8 +300,8 @@ form.search .icon-search:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 #content .product-item .product-img {
-    width: 180px;
-    height: 150px;
+    width: 100%;
+    height: 53%;
 }
 #content .product-item a:hover .product-img {
     transform: rotateY(-180deg);
@@ -313,7 +344,7 @@ form.search .icon-search:hover{
     transition: .5s;
 }
 #content .product-item .btn-product::before,
-.shop .btn-product::before {
+.shop .basket .btn-product::before {
     content: '';
     position: absolute;
     top: 0;
@@ -327,15 +358,15 @@ form.search .icon-search:hover{
     z-index: -1;
 }
 #content .product-item .btn-product:hover::before,
-.shop .btn-product:hover::before {
+.shop .basket:hover .btn-product::before {
     transform: scale(1.1);
     box-shadow: 0 0 15px #ffee10;
 }
-#content .product-item .btn-product:hover,
-.shop .btn-product:hover {
+#content .product-item .btn-product:hover {
     color: #ffee10;
     box-shadow: 0 0 5px #ffee10;
     text-shadow: 0 0 5px #ffee10;
+    cursor: grab;
 }
 #content .product-item .product-name::before {
     content: '';
@@ -378,6 +409,7 @@ form.search .icon-search:hover{
 .container{
     margin: 0px 5%;
 }
+/* social network */
 #icon ul.social {
     margin: 0;
     padding: 0;
@@ -421,7 +453,7 @@ form.search .icon-search:hover{
     z-index: -1;
 }
   
-#icon ul.social li a:hover::before {
+#icon ul.social li a:hover::before{
     transform: scale(1.1);
     box-shadow: 0 0 15px #ffee10;
 }
