--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,8 @@ body a:hover {
 }
 .shop .logo{
     width: 20%;
+    outline: none;
+    border: none;
 }
 .shop .search {
     position: absolute;
@@ -98,7 +100,7 @@ body a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 100;
     transition: all 0.5s ease-in-out;
 }
 #nav ul{
@@ -205,7 +207,7 @@ body a:hover {
     }
 }
 /* go to top */
-.fa-circle-chevron-up {
+.gototop {
     font-size: 45px;
     background-color: tomato;
     color: #fff;
@@ -216,7 +218,7 @@ body a:hover {
     bottom: 40px;
     z-index: 1000;
 }
-.fa-circle-chevron-up:hover {
+.gototop:hover {
     background-color: #ffee10;
     color: lightgrey;
     text-decoration: none;
@@ -408,6 +410,131 @@ body a:hover {
 }
 .container{
     margin: 0px 5%;
+}
+/* modal */
+.js-modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.5);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    opacity: 1;
+    z-index: 111;
+}
+.js-modal-open {
+    display: flex;
+}
+.js-modal .modal-container {
+    position: relative;
+    width: 500px;
+    max-width: 40%;
+    min-height: 200px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    animation: modalFadeIn ease 0.5s;
+}
+.js-modal .js-modal-close {
+    position: absolute;
+    color: #fff;
+    font-size: 25px;
+    top: -7px;
+    right: 0;
+    padding: 5px;
+    opacity: 0.8;
+}
+.js-modal .js-modal-close:hover {
+    color: red;
+    opacity: 1;
+}
+.js-modal .modal-img {
+    position: relative;
+    width: 100%;
+    height: 40%;
+    padding: 5px;
+    text-align: center;
+}
+.js-modal .modal-img img {
+    width: 65%;
+    height: 40%;
+}
+.js-modal .modal-header {
+    background-color: #00bbb3;
+    color: #fff;
+    height: 130px;
+    text-transform: uppercase;
+}
+.js-modal .modal-body {
+    padding: 1px;
+}
+.js-modal .modal-footer {
+    margin-bottom: 5%;
+}
+.js-modal .modal-footer a{
+    color: #2196f3;
+}
+.js-modal .modal-quantity {
+    position: relative;
+    margin: 5% 37.5%;
+    width: 25%;
+    line-height: 40px;
+    background-color: #eaeaea;
+    font-size: 20px;
+    font-weight: bolder;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+.js-modal .quantity{
+    width: 30px;
+    height: 30px;
+    line-height: 25px;
+    text-align: center;
+    outline: none;
+    border: 3px solid #eaeaea;
+    font-size: 20px;
+    cursor: pointer;
+}
+.js-modal .btn-buy-product {
+    margin: 5%;
+}
+#btn-buy-product {
+    width: 50%;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: #00a650;
+    color: #fff;
+    border: 1px solid #00a650;
+    border-radius: 50px;
+    padding: 3%;
+    cursor: pointer;
+}
+#btn-buy-product:hover {
+    background-color: #fff;
+    color: #00a650;
+}
+.js-modal-footer .modal-help a {
+    text-decoration: underline;
+}
+@keyframes modalFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-150px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 /* social network */
 #icon ul.social {
