--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,10 +66,22 @@ body a:hover {
     text-align: center;
     padding: 1%;
     line-height: 30px;
-    background: #333;
+    background: #00a650;
     border-radius: 50%;
-    color: #666;
     transition: .5s;
+}
+.shop .basket .btn-product::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: green;
+    transition: .5s;
+    transform: scale(.9);
+    z-index: -1;
 }
 .shop .basket:hover {
     color: #ffee10;
@@ -340,13 +352,14 @@ body a:hover {
     bottom: 10px;
     padding: 5%;
     font-size: 20px;
-    background: #333;
+    background: green;
     border-radius: 50%;
-    color: #666;
+    color: #ffee10;
+    outline: none;
+    border: none;
     transition: .5s;
 }
-#content .product-item .btn-product::before,
-.shop .basket .btn-product::before {
+#content .product-item .btn-product::before {
     content: '';
     position: absolute;
     top: 0;
@@ -354,7 +367,7 @@ body a:hover {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background: #333;
+    background: #00a650;
     transition: .5s;
     transform: scale(.9);
     z-index: -1;
