--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,130 +1,148 @@
-/* Begin Form Login */
-
-.login-title {
-    padding: 50px 0;
+#wrapper{
+    background: url('../img/bglogin.jpg');
+    background-size: cover;
+    background-position-y: 0;
+    font-size: 18px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#form-login{
+    max-width: 400px;
+    background: rgba(0, 0, 0 , 0.8);
+    flex-grow: 1;
+    padding: 30px 30px 40px;
+    box-shadow: 0px 0px 17px 2px rgba(255, 255, 255, 0.8);
+    z-index: 10;
+}
+.form-heading{
+    font-size: 30px;
+    font-family: Roboto;
+    font-weight: bolder;
+    line-height: 90px;
+    color: #f5f5f5;
     text-align: center;
-    letter-spacing: 2px;
+    margin-bottom: 30px;
 }
-
-.login-title h1 {
-    margin: 0 0 0px;
-    font-size: 24px;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font-weight: 400;
-    color: rgb(0, 26, 255);
+.form-group{
+    border-bottom: 1px solid #fff;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    display: flex;
+    line-height: 20px;
 }
-
-.login-title span {
-    font-size: 12px;
-}
-
-.login-title span .fa {
-    color: #33b5e5;
-}
-
-.login-title span a {
-    color: #33b5e5;
-    font-weight: 600;
-    text-decoration: none;
-}
-
-.login {
-    width: 400px;
-    margin: 16px auto;
+.form-group i{
+    color: #fff;
     font-size: 16px;
+    padding-top: 5px;
+    padding-right: 10px;
 }
-
-
-/* Reset top and bottom margins from certain elements */
-
-.login-header,
-.login p {
-    margin-top: 0;
-    margin-bottom: 0;
+.form-input{
+    background: transparent;
+    border: 0;
+    outline: 0;
+    color: #f5f5f5;
+    flex-grow: 1;
 }
-
-
-/* The triangle form is achieved by a CSS hack */
-
-.login-triangle {
-    width: 0;
-    margin-right: auto;
-    margin-left: auto;
-    border: 12px solid transparent;
-    border-bottom-color: #28d;
+.form-input::placeholder{
+    color: #f5f5f5;
 }
-
-.login-header {
-    background: #33b5e5;
-    padding: 20px;
-    font-size: 1.4em;
-    font-weight: normal;
-    text-align: center;
-    text-transform: uppercase;
-    color: #fff;
-}
-
-.khung-login {
-    background: #fff;
-    padding: 25px;
-}
-
-
-/* Every row inside .login-container is defined with p tags */
-
-.login input[type="Email"],
-.login input[type="password"],
-.login input[type="text"] {
-    background: #fff;
-    margin: 25px 0px;
-    color: #000;
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    border-width: 1px;
-    border-style: solid;
-    padding: 13px;
-    outline: none;
-    font-family: inherit;
-    font-size: 0.95em;
-}
-
-.login-container input[type="email"] {
-    color: rgb(36, 36, 36);
-}
-
-.login-container input[type="email"]:hover {
-    border-color: #28d;
-}
-
-
-/* Text fields' focus effect */
-
-.login input[type="email"]:focus,
-.login input[type="password"]:focus,
-.login input[type="text"]:focus {
-    border-color: #33b5e5;
-}
-
-.login input[type="email"]:hover .login input[type="password"]:hover {
-    border-color: #28d;
-}
-
-.login input[type="submit"] {
-    background: #33b5e5;
-    border-color: transparent;
-    color: #fff;
+#eye i{
+    padding-right: 0;
     cursor: pointer;
 }
-
-.login input[type="submit"]:hover {
-    background: #28d;
+.form-submit{
+    background: transparent;
+    border: 1px solid #f5f5f5;
+    color: #fff;
+    width: 100%;
+    height: 42px;
+    text-transform: uppercase;
+    padding: 6px 10px;
+    transition: 0.25s ease-in-out;
+    margin-top: 30px;
+    cursor: pointer;
 }
-
-
-/* Buttons' focus effect */
-
-.login input[type="submit"]:focus {
-    border-color: #05a;
+.form-submit:hover{
+    border: 1px solid #54a0ff;
+}
+.form-submit:active{
+    border: 1px solid #ffee10;
+    transform: scale(1.05);
+    box-shadow: 0 0 15px #ffee10;
+}
+.kengang{
+    height: 1px;
+    width: 100%;
+    margin-top: 7px;
+    background-color: #dbdbdb;
+}
+/* login google */
+.google-btn {
+    width: 100%;
+    height: 42px;
+    background-color: #4285f4;
+    border-radius: 2px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    margin-top: 20px;
+    cursor: pointer;
+}
+.google-icon-wrapper {
+    position: absolute;
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+.google-icon {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 11px;
+    width: 18px;
+    height: 18px;
+}
+.btn-text {
+    text-align: center;
+    line-height: 42px;
+    color: #fff;
+    font-size: 14px;
+    letter-spacing: 0.2px;
+    font-family: "Roboto";
+}
+.google-btn:hover {
+    box-shadow: 0 0 6px #4285f4;
+}
+.google-btn:active {
+    background: #1669f2;
+}
+/* login facebook */
+.facebook-btn {
+    width: 100%;
+    height: 42px;
+    background-color: #3b5998;
+    border-radius: 2px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    margin-top: 10px;
+    cursor: pointer;
+}
+.facebook-icon-wrapper {
+    position: absolute;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 1px;
+    margin-left: 1px;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
+    background-color: #fff;
+    color: #3b5998;
+}
+.facebook-btn:hover {
+    box-shadow: 0 0 6px #4285f4;
+}
+.facebook-btn:active {
+    background: #1669f2;
 }
