--- a/static/css/register.css
+++ b/static/css/register.css
@@ -8,8 +8,8 @@
     justify-content: center;
     align-items: center;
 }
-#form-login{
-    max-width: 400px;
+#form-register{
+    max-width: 800px;
     background: rgba(0, 0, 0 , 0.8);
     flex-grow: 1;
     padding: 30px 30px 40px;
